# RAGProject

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.neo4j-demo.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_evaluation_results.py  0003_phase2_strategy_trace.py  0004_eval_dataset_metrics.py  0005_sparse_retrieval_fts.py  0006_document_chunk_metadata.py  0007_document_version_metadata.py  0008_llm_tool_orchestrator_strategy.py  0009_context_budget_trace.py  0010_context_compression_trace.py  0011_tool_result_compression_trace.py  0012_graph_schema_index_foundation.py  0013_langchain_agentic_strategy.py  0014_graph_retrieval_strategy_router.py  0015_langgraph_agentic_strategy.py  0016_graph_store_provider_seed.py  0017_retrieval_cache_foundation.py  0018_evaluation_generation_usage.py  0019_graph_provider_neo4j.py  0020_graph_llm_extractor_default.py  (+3 more)
backend/app/: main.py
backend/tests/: test_agentic_planner.py  test_agentic_retrieval.py  test_alembic_config.py  test_api_foundation.py  test_auth_security.py  test_aws_adapters.py  test_chat_api.py  test_chat_service_repository.py  test_context_budget.py  test_db_schema_seed.py  test_demo_corpus_scripts.py  test_document_api.py  test_document_ingest_handler.py  test_document_service_repository.py  test_embedding_fake.py  test_embedding_qdrant_indexing.py  test_evaluation_gold_v2.py  test_evaluation_gold_v2_runner.py  test_evaluation_multihop_fixture.py  test_evaluation_no_context_detection.py  test_evaluation_reliability.py  test_evaluations.py  test_evaluations_pr17.py  test_evidence_pack.py  test_generation.py  test_generation_cleanup.py  test_graph_citations.py  test_graph_entity_relation_extraction_pipeline.py  test_graph_migration_roundtrip.py  test_graph_rag_service.py  test_graph_retrieval_repository_review_edges.py  test_graph_retrieval_strategy.py  test_graph_schema_index_foundation.py  test_graph_schema_offsets.py  test_graph_schema_security.py  test_health.py  test_ingest_extraction_chunking.py  test_injection_detection.py  test_job_repository_postgres.py  test_jobs_api.py  (+29 more)
(+532 files in other folders)
