[project]
name = "ragproject-backend"
version = "0.1.0"
description = "Phase1 RAG portfolio backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "bcrypt>=4.0.1,<4.1.0",
  "boto3>=1.42.50,<2.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "langchain-core>=1.0.0,<2.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.1.0",
  "pydantic-settings>=2.2.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]
observability = [
  "langsmith>=0.1.0",
]
neo4j = [
  "neo4j>=5.28.0,<7.0.0",
]
experiments = [
  "sentence-transformers>=2.7.0,<4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
